remove old objective section and change title and keywords

--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -29,10 +29,10 @@
  bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,
  breaklinks=true,pdfborder={0 0 1},backref=false,colorlinks=true]
  {hyperref}
-\hypersetup{pdftitle={MediaTemple resume},
+\hypersetup{pdftitle={Connectivity Resume},
  pdfauthor={Ryan Voots},
  pdfsubject={If you're reading this, I made this in LaTeX and I'm glad you're really scouring my resume.},
- pdfkeywords={media, temple, resume, mediatemple, are, you, really, a, search, engine}}
+ pdfkeywords={connectivity, resume, are, you, really, a, search, engine}}
 
 
 % For more compact lists.
@@ -60,9 +60,6 @@
 
 \maketitle
 \vspace{0.1in}
-
-\section{Objective}
-To start a career developing software that will challenge my knowledge and require me to expand my abilities, while allowing me to use my skills designing software and administering systems.
 
 \section{Skills}
 \begin{description}
