--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -165,17 +165,10 @@ with CSS3 for a modern layout with MultiMarkup for creating documents.
 \item More Information: \url{http://github.com/simcop2387/MediaSched}
 \end{compactitem}
 
-\section{Education}
-\affiliation{Kennesaw State University}{2010}
-
-\begin{compactitem}
-\item Studying for a degree in Computer Science.  Focusing on programming, networks, and databases.
-\end{compactitem}
-
 \section{References}
 \begin{tabular}{lll}
-\rowcolor{white} Michael Parkhurst & Software Developer at Media Temple & mparkhurst@mediatemple.net \\
-\rowcolor{lightgray} Peter Krumins & Software Developer/Blogger & peter@catonmat.net \\
-\rowcolor{white} James Halliday & Software Developer & mail@substack.net
+\rowcolor{white} Kaitlyn Parkhurst & Software Developer at Connectivity & symkat@symkat.com \\
+\rowcolor{lightgray} Diane Xu & Engineering Manager & dxu@rent.com \\
+\rowcolor{white} Mike Rozek & Manager & mike@rozeks.com
 \end{tabular}
 \end{document}
