--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -168,7 +168,7 @@ with CSS3 for a modern layout with MultiMarkup for creating documents.
 \section{References}
 \begin{tabular}{lll}
 \rowcolor{white} Kaitlyn Parkhurst & Software Developer at Connectivity & symkat@symkat.com \\
-\rowcolor{lightgray} Diane Xu & Engineering Manager & dxu@rent.com \\
-\rowcolor{white} Mike Rozek & Manager & mike@rozeks.com
+\rowcolor{lightgray} Diane Xu & Engineering Manager at Rent.com & dxu@rent.com \\
+\rowcolor{white} Mike Rozek & Manager at Zip Recruiter & mike@rozeks.com
 \end{tabular}
 \end{document}
