--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -11,8 +11,8 @@
 \phone{678-551-2387}
 \email{ryan@voots.org}
 \webpage{http://www.simcop2387.info}
-\streetaddress{1300 S. Figueroa St}
-\citystatezip{Los Angeles, CA 90015}
+\streetaddress{3627 Bagley Ave}
+\citystatezip{Los Angeles, CA 90034}
 % \citystatezip{  }
 
 \usepackage{geometry}
@@ -29,10 +29,10 @@
  bookmarks=true,bookmarksnumbered=false,bookmarksopen=false,
  breaklinks=true,pdfborder={0 0 1},backref=false,colorlinks=true]
  {hyperref}
-\hypersetup{pdftitle={Connectivity Resume},
+\hypersetup{pdftitle={Ryan Voots Resume},
  pdfauthor={Ryan Voots},
  pdfsubject={If you're reading this, I made this in LaTeX and I'm glad you're really scouring my resume.},
- pdfkeywords={connectivity, resume, are, you, really, a, search, engine}}
+ pdfkeywords={resume, are, you, really, a, search, engine}}
 
 
 % For more compact lists.
@@ -64,7 +64,7 @@
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, C/C++, C\#, Javascript, Java, SQL, PHP
+Perl, C/C++, C\#, Javascript, Java, SQL
 \item[Operating Systems:]
 Linux, Windows, some BSD
 \item[Applications and Libraries:]
@@ -76,6 +76,43 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 \section{Experience}
 
 \subsection{Work History}
+
+\affiliation[Senior Software Engineer]{Surf-Air}{2017-2018}
+\begin{compactitem}
+\item Maintained existing legacy systems
+  \begin{compactitem}
+  \item Thouroghly documented both architecture and functionality in system
+  \item Helped devops team to properly upgrade and deploy legacy system onto upgraded platforms
+  \end{compactitem}
+\item Drove primary backend development of new features and products
+\item Integrated new vendor systems with the legacy backends
+\end{compactitem}
+
+\affiliation[Senior Software Engineer]{Ziprecruiter}{2016}
+\begin{compactitem}
+\item Updated account creation flow backend code to handle new flows to aid in user conversions
+\item Designed an internal service for secure resume and document conversion
+  \begin{compactitem}
+  \item New internal service replaced an external one that was costing a significant amount to run
+  \item New service also allowed for multiple conversions to be done in parallel to take better advantage of larger servers
+  \item Allowed asynchronous conversion of resumes and documents to PDF for embedding in browsers
+  \item Designed the system to be secured against corrupted documents and attacks to prevent it from being able to disclose PII
+  \end{compactitem}
+\end{compactitem}
+
+\affiliation[Senior Software Engineer]{Connectivity}{2015}
+\begin{compactitem}
+\item Spearheaded integration with multiple phone systems for data acquisition
+  \begin{compactitem}
+  \item Twilio: Simulring/Call hunting and forwarding
+  \item Ringcentral: Direct integration via API
+  \item Grasshopper via twilio
+  \item Vonage, AT\&T, Time Warner, et al.
+  \end{compactitem}
+\item Helped architect internal API/Reporting and Analytics engine
+\item Created automated text messaging system based on scheduled hours for clients
+\item Designed and developed a system for managing and heuristically detecting burned IP addresses for crawling various data sources 
+\end{compactitem}
 
 \affiliation[Lead Developer/Team Lead/Scrum Master]{Rent.com}{2012-2014}
 \begin{compactitem}
@@ -123,11 +160,25 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 
 \affiliation[~]{Github}{~}
 \begin{compactitem}
-\item You can also find many more projects on my Github account at \url{https://github.com/simcop2387/}
+\item You can also find many more projects on my Github account at \url{https://github.com/simcop2387/} and as the perlbot project at \url{https://github.com/perlbot/}
+\end{compactitem}
+
+\affiliation[Creator, Lead Designer, and Lead Developer]{App::EvalserverAdvanced}{??? - Present}
+\begin{compactitem}
+\item App::EvalserverAdvanced is an application sandbox and ephemeral container system that allows secure and safe execution of arbitrary programs and source code.  It's currently powering teaching and learning tools for the Perl community on IRC and https://perl.bot/. 
+\item The sandbox and container are completely configurable to allow for multiple security contexts and environments for different applications and requirements.
+\item The server has a formally defined protocol allowing for asynchronous job creation and reporting.  This allows both parallel running of applications and in theory priority based queuing of jobs based on desired priority and session history.
+\item More Information: \url{http://www.simcop2387.info/}
+\end{compactitem}
+
+
+\affiliation[Creator, Lead Designer, and Lead Developer]{App::EvalserverAdvanced}{??? - Present}
+\begin{compactitem}
+\item App::EvalserverAdvanced is an application sandbox and ephemeral container system that allows secure and safe execution of arbitrary programs and source code.  It's currently powering teaching and learning tools for the Perl community on IRC and https://perl.bot/. 
+\item More Information: \url{http://www.simcop2387.info/}
 \end{compactitem}
 
 \affiliation[Creator, Lead Designer, and Lead Developer]{Farnsworth Programming Language}{2008-}
-
 \begin{compactitem}
 \item Farnsworth is a dynamically typed functional and imperative programming language.  
 It is being designed for applied mathematics and physics.  Currently has a working implementation 
@@ -167,8 +218,8 @@ with CSS3 for a modern layout with MultiMarkup for creating documents.
 
 \section{References}
 \begin{tabular}{lll}
-\rowcolor{white} Kaitlyn Parkhurst & Software Developer at Connectivity & symkat@symkat.com \\
-\rowcolor{lightgray} Diane Xu & Engineering Manager at Rent.com & dxu@rent.com \\
+\rowcolor{white} Kaitlyn Parkhurst & Director of Development at Connectivity & symkat@symkat.com \\
+\rowcolor{lightgray} Jeff Yoak & Directory of Development at Connectivity & jeff@yoak.com \\
 \rowcolor{white} Mike Rozek & Manager at Zip Recruiter & mike@rozeks.com
 \end{tabular}
 \end{document}
