--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -81,16 +81,16 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 \begin{compactitem}
 \item Maintained existing legacy systems
   \begin{compactitem}
-  \item Thouroghly documented both architecture and functionality in system
+  \item Thoroughly documented both architecture and functionality in system
   \item Helped devops team to properly upgrade and deploy legacy system onto upgraded platforms
   \end{compactitem}
-\item Drove primary backend development of new features and products
-\item Integrated new vendor systems with the legacy backends
+\item Drove primary back-end development of new features and products
+\item Integrated new vendor systems with the legacy back-ends
 \end{compactitem}
 
 \affiliation[Senior Software Engineer]{Ziprecruiter}{2016}
 \begin{compactitem}
-\item Updated account creation flow backend code to handle new flows to aid in user conversions
+\item Updated account creation flow back-end code to handle new flows to aid in user conversions
 \item Designed an internal service for secure resume and document conversion
   \begin{compactitem}
   \item New internal service replaced an external one that was costing a significant amount to run
@@ -121,11 +121,11 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 \item Lead the move between data centers migrating almost all production systems.
   \begin{compactitem}
   \item Moved and tested code from perl 5.14 to perl 5.16
-  \item Changed deployment system to work as an unpriviledged user to accomidate more securely setup systems
+  \item Changed deployment system to work as an unprivileged user to accommodate more securely setup systems
   \item Assisted the overnight deployment and testing
   \end{compactitem}
 \item Re-architeched and finished long standing rewrite of inventory automation system
-\item Perfomed SCRUM Master duties involving planning, auditing, and making sure that projects were being worked on and not blocked
+\item Performed SCRUM Master duties involving planning, auditing, and making sure that projects were being worked on and not blocked
 \item Took on project management responsibilities for several projects to ensure they were done properly and on time
 \end{compactitem}
 
