--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -64,13 +64,13 @@
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, C/C++, C\#, Javascript, Java, SQL
+Perl, Javascript (Node and some browser), Python, C/C++, SQL
 \item[Operating Systems:]
-Linux, Windows, some BSD
+Linux, Windows, some OSX & BSD
 \item[Applications and Libraries:]
 Oracle, PostgreSQL, MySQL, RabbitMQ, Apache, Lighttpd, Git, CVS, Subversion
 \item[Miscellaneous:]
-HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication skills; excellent troubleshooting, problem solving, and debugging skills; very quick learner.
+HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication skills; excellent troubleshooting, problem solving, and debugging skills; very fast at getting up to speed on existing systems.
 \end{description}
 
 \section{Experience}
@@ -129,30 +129,7 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 \item Took on project management responsibilities for several projects to ensure they were done properly and on time
 \end{compactitem}
 
-\affiliation[Programmer]{Contract Work}{2011}
-\begin{compactitem}
-\item Created Application to retrieve data from Google Analytics and perform customized reports on data importable into spreadsheets and other report creation software.
-\end{compactitem}
-
-\affiliation[Web Designer, Javascript Programmer, Backend Programmer]{Things Done Later}{2011}
-\begin{compactitem}
-\item Created interactive interface and backend for Things Done Later.  \url{http://www.thingsdonelater.com} code available at \url{https://github.com/simcop2387/TDL}.
-\item Backend consists of a lightweight FastCGI Perl backend capable of handling large loads without requiring large investments in server capacity.
-\item Frontend is created using JQuery and features a fully secure login using HMAC-SHA256 challenge-response to allow authentication without transmitting sensitive data.
-\end{compactitem}
-
-\affiliation[Web Designer, Javascript Programmer]{Not A New Yorker}{2010}
-\begin{compactitem}
-\item Created several designs and implemented them for \url{http://www.notanewyorker.com/} and related sites.
-\end{compactitem}
-
-\affiliation[Programmer]{Cyphrus Federation of Underwater Activities}{2010}
-
-\begin{compactitem}
-\item Created interactive dive tables to plan no decompression dives without the aide of an expensive dive computer.
-\item The Perl backend was created to be edited and worked with using the existing workflow of the client.
-\item More Information: \url{http://www.oceanssearch.com/}
-\end{compactitem}
+Previous employment information available on request.
 
 \vspace{0.2in}
 
