Prelim changes updated with existing experience

--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -77,6 +77,34 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 
 \subsection{Work History}
 
+\affiliation[Contractor]{Buzli}{April/May 2019}
+\begin{compactitem}
+\item Created AWS infrastructure with Terraform to log ad data for future reports and auditing
+\item Created software to pull data from 3rd party ad servers
+\item Began development of integration with 3rd party ad provider to existing infrastructure
+\end{compactitem}
+
+\affiliation[Senior Software Engineer]{Sold.com}{2018-2019}
+\begin{compactitem}
+\item Backend service development: Java and Python
+\item Middleware Node.js work to securely and safely expose backend services to the outside world
+\item Frontend work redesigning key parts of functionality and UX.
+\item Created address matching and normalization service
+  \begin{compactitem}
+  \item Takes in human and public record addresses to match between differing formatting and abbreviations
+  \item Matched public record data to determine correct valuation of properties based on existing records
+  \end{compactitem}
+\item Helped revising design of data tracking of the web frontend using Segment.io
+\item Aided Data team in understanding existing application and data coming from the application to develop reports
+\item Managed jenkins service for automatic deployments to development environments and manually triggered deployments to production
+\item Managed existing AWS infrastructure
+  \begin{compactitem}
+  \item Setup new services with ECS and ECR
+  \item Setup new domains and load balancers
+  \item Created reporting infrastructure for Data/BI team (Databases, Redshift, EC2 instances)
+  \end{compactitem}
+\end{compactitem}
+
 \affiliation[Senior Software Engineer]{Surf-Air}{2017-2018}
 \begin{compactitem}
 \item Maintained existing legacy systems
