--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -64,16 +64,24 @@
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, Javascript (Node and some browser), Python, C/C++, SQL
+Perl, Javascript (Node, react and others), Python, C/C++, SQL
 \item[Operating Systems:]
-Linux, Windows, some OSX \& BSD
+Linux, Windows, some OSX
 \item[Applications and Libraries:]
-Oracle, PostgreSQL, MySQL, RabbitMQ, Apache, Lighttpd, Git, CVS, Subversion
+PostgreSQL, MySQL, RabbitMQ, Apache, Lighttpd, Git, CVS, Subversion, some previous Oracle experience
 \item[Miscellaneous:]
 HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication skills; excellent troubleshooting, problem solving, and debugging skills; very fast at getting up to speed on existing systems.
 \end{description}
 
 \section{Experience}
+
+\subsection{Perl Modules and open source work}
+\begin{compactitem}
+\item App::EvalServerAdvanced
+Complete and secure application sandbox capable of running arbitrary programs from the world at large.  Can be demonstrated at https://perl.bot/ with every major release of Perl and several other languages.
+\item More modern pastebin capable of automatically announcing pastes on IRC, while still supporting non-graphical browsers.  https://github.com/perlbot/perlbuut-pastebin/
+\item Many other projects under both https://github.com/perlbot/ and https://github.com/simcop2387/
+\end{compactitem}
 
 \subsection{Work History}
 
