--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -75,13 +75,45 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 
 \section{Experience}
 
-\subsection{Perl Modules and open source work}
+\subsection{Open Source Work}
+
+\affiliation[~]{Github}{~}
 \begin{compactitem}
-\item App::EvalServerAdvanced
-Complete and secure application sandbox capable of running arbitrary programs from the world at large.  Can be demonstrated at https://perl.bot/ with every major release of Perl and several other languages.
-\item More modern pastebin capable of automatically announcing pastes on IRC, while still supporting non-graphical browsers.  https://github.com/perlbot/perlbuut-pastebin/
-\item Many other projects under both https://github.com/perlbot/ and https://github.com/simcop2387/
+\item You can also find many more projects on my Github account at \url{https://github.com/simcop2387/} and as the perlbot project at \url{https://github.com/perlbot/}
 \end{compactitem}
+
+\affiliation[Creator, Lead Designer, and Lead Developer]{App::EvalserverAdvanced}{2006? - Present}
+\begin{compactitem}
+\item App::EvalserverAdvanced is an application sandbox and ephemeral container system that allows secure and safe execution of arbitrary programs and source code.  It's currently powering teaching and learning tools for the Perl community on IRC and \url{https://perl.bot/}. 
+\item The sandbox and container are completely configurable to allow for multiple security contexts and environments for different applications and requirements.
+\item The server has a formally defined protocol allowing for asynchronous job creation and reporting.  This allows both parallel running of applications and in theory priority based queuing of jobs based on desired priority and session history.
+\item More Information: \url{https://metacpan.org/pod/App::EvalServerAdvanced} and \url{https://github.com/perlbot/}
+\end{compactitem}
+
+\affiliation[Creator, Lead Designer, and Lead Developer]{Farnsworth Programming Language}{2008-}
+\begin{compactitem}
+\item Farnsworth is a dynamically typed functional and imperative programming language.  
+It is being designed for applied mathematics and physics.  Currently has a working implementation 
+consisting of 26,000 lines of code, including a testing suite for the parts of the language that are finalized.
+\item More Information: \url{https://www.simcop2387.info/}
+\end{compactitem}
+
+\affiliation[Creator, Lead Programmer]{AutoSub}{2009}
+
+\begin{compactitem}
+\item A project to aide in the creation of closed captions by identifying portions of 
+video that contain human speech using various types of signal analysis.
+\item More Information: \url{https://github.com/simcop2387/autosub}
+\end{compactitem}
+
+\affiliation[Creator, Lead Programmer]{MediaSched}{2005-}
+
+\begin{compactitem}
+\item MediaSched is a program for easily running any kind of scheduled and unscheduled media playback.  Supporting the use of existing calendar/scheduling software for the selection of simple to complex play lists.
+\item More Information: \url{http://github.com/simcop2387/MediaSched}
+\end{compactitem}
+
+\vspace{0.2in}
 
 \subsection{Work History}
 
@@ -167,60 +199,6 @@ Complete and secure application sandbox capable of running arbitrary programs fr
 
 Previous employment information available on request.
 
-\vspace{0.2in}
-
-\subsection{Open Source Work}
-
-\affiliation[~]{Github}{~}
-\begin{compactitem}
-\item You can also find many more projects on my Github account at \url{https://github.com/simcop2387/} and as the perlbot project at \url{https://github.com/perlbot/}
-\end{compactitem}
-
-\affiliation[Creator, Lead Designer, and Lead Developer]{App::EvalserverAdvanced}{??? - Present}
-\begin{compactitem}
-\item App::EvalserverAdvanced is an application sandbox and ephemeral container system that allows secure and safe execution of arbitrary programs and source code.  It's currently powering teaching and learning tools for the Perl community on IRC and https://perl.bot/. 
-\item The sandbox and container are completely configurable to allow for multiple security contexts and environments for different applications and requirements.
-\item The server has a formally defined protocol allowing for asynchronous job creation and reporting.  This allows both parallel running of applications and in theory priority based queuing of jobs based on desired priority and session history.
-\item More Information: \url{https://metacpan.org/pod/App::EvalServerAdvanced}
-\end{compactitem}
-
-\affiliation[Creator, Lead Designer, and Lead Developer]{Farnsworth Programming Language}{2008-}
-\begin{compactitem}
-\item Farnsworth is a dynamically typed functional and imperative programming language.  
-It is being designed for applied mathematics and physics.  Currently has a working implementation 
-consisting of 26,000 lines of code, including a testing suite for the parts of the language that are finalized.
-\item More Information: \url{https://www.simcop2387.info/}
-\end{compactitem}
-
-\affiliation[Creator, Lead Programmer]{AutoSub}{2009}
-
-\begin{compactitem}
-\item A project to aide in the creation of closed captions by identifying portions of 
-video that contain human speech using various types of signal analysis.
-\item More Information: \url{https://github.com/simcop2387/autosub}
-\end{compactitem}
-
-\affiliation[Web Designer, Javascript Programmer]{Kona}{2010}
-
-\begin{compactitem}
-\item Kona is a simple Wiki application created using modern technologies in Perl and XHTML 
-with CSS3 for a modern layout with MultiMarkup for creating documents.
-\item More Information: \url{http://github.com/symkat/Kona}
-\end{compactitem}
-
-\affiliation[Bug tester, Programmer]{Freedroid RPG}{2003-2004}
-
-\begin{compactitem}
-\item Found and fixed various buffer overflows and other bugs
-\item Did some optimization on the original OpenGL and other graphics code in the project
-\end{compactitem}
-
-\affiliation[Creator, Lead Programmer]{MediaSched}{2005-}
-
-\begin{compactitem}
-\item MediaSched is a program for easily running any kind of scheduled and unscheduled media playback.  Supporting the use of existing calendar/scheduling software for the selection of simple to complex play lists.
-\item More Information: \url{http://github.com/simcop2387/MediaSched}
-\end{compactitem}
 
 \section{References}
 \begin{tabular}{lll}
