--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -117,6 +117,15 @@ video that contain human speech using various types of signal analysis.
 
 \subsection{Work History}
 
+\affiliation[Senior Software Engineer]{Intellisurvey}{August-November 2019}
+\begin{compactitem}
+\item Backend perl development
+  \begin{compactitem}
+  \item Implemented new parsing and grammar rules for survey language
+  \item Fixed parsing errors for survey language
+  \end{compactitem}
+\end{compactitem}
+
 \affiliation[Contractor]{Buzli}{April/May 2019}
 \begin{compactitem}
 \item Created AWS infrastructure with Terraform to log ad data for future reports and auditing
