Adding stuff for thinkiq

--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -117,6 +117,33 @@ video that contain human speech using various types of signal analysis.
 
 \subsection{Work History}
 
+\affiliation[DevOps Contractor]{ThinkIQ}{March 2020-June 2020}
+\begin{compactitem}
+\item Main Project - Rearchitecting deployment stack
+  \begin{compactitem}
+  \item Original architecture had lots of overhead, deploying about a dozen pieces in containers in kubernetes.  Including production databases.  This lead to performance and capacity issues on customer systems
+  \item I redesigned the system to be deployable as a single VM image, reducing overhead and making hosted database solutions such as Amazon RDS and Azure Database easier to use.
+  \item Helped consolidate the design of internal scripting systems using python to have a single managed environment on the new VM images.  Previously there were multiple copies of python depending on which part of the system an action was started from, each with their own copies of installed modules and vendor libraries that were frequently different versions.
+  \end{compactitem}
+\item Developer Support
+  \begin{compactitem}
+  \item Provided experienced code reviews for vendor python libraries and code.
+  \item Assisted in securing the design of the authentication system combing GraphQL and the existing CMS (Joomla) so that future API clients can be authenticated securely among services using JWT tokens.
+  \item TBA
+  \end{compactitem}
+\item Customer Production Systems
+  \begin{compactitem}
+  \item TBA
+  \end{compactitem}
+\end{compactitem}
+
+\affiliation[Contractor]{Buzli}{April/May 2019}
+\begin{compactitem}
+\item Created AWS infrastructure with Terraform to log ad data for future reports and auditing
+\item Created software to pull data from 3rd party ad servers
+\item Began development of integration with 3rd party ad provider to existing infrastructure
+\end{compactitem}
+
 \affiliation[Senior Software Engineer]{Intellisurvey}{August-November 2019}
 \begin{compactitem}
 \item Backend perl development
