More filling out

--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -129,19 +129,13 @@ video that contain human speech using various types of signal analysis.
   \begin{compactitem}
   \item Provided experienced code reviews for vendor python libraries and code.
   \item Assisted in securing the design of the authentication system combing GraphQL and the existing CMS (Joomla) so that future API clients can be authenticated securely among services using JWT tokens.
-  \item TBA
   \end{compactitem}
 \item Customer Production Systems
   \begin{compactitem}
-  \item TBA
+  \item Setup additional monitoring for production systems (Healthchecks.io + PagerDuty)
+  \item Diagnosed overcommited customer systems that were having intermittent issues with IO availablity
+  \item Normal maintainence ensuring customer backups were working properly and testing restoration functionality of systems onto internal staging systems  
   \end{compactitem}
-\end{compactitem}
-
-\affiliation[Contractor]{Buzli}{April/May 2019}
-\begin{compactitem}
-\item Created AWS infrastructure with Terraform to log ad data for future reports and auditing
-\item Created software to pull data from 3rd party ad servers
-\item Began development of integration with 3rd party ad provider to existing infrastructure
 \end{compactitem}
 
 \affiliation[Senior Software Engineer]{Intellisurvey}{August-November 2019}
