Spell checked a bit

--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -64,11 +64,11 @@
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, Javascript (Node, react and others), Python, C/C++, SQL
+Perl, JavaScript (Node, react and others), Python, C/C++, SQL
 \item[Operating Systems:]
-Linux, Windows, some OSX
+Linux, Windows, some OS X
 \item[Applications and Libraries:]
-PostgreSQL, MySQL, RabbitMQ, Apache, Lighttpd, Git, CVS, Subversion, some previous Oracle experience
+PostgreSQL, MySQL, RabbitMQ, Nginx, Apache, Lighttpd, Git, CVS, Subversion, some previous Oracle experience
 \item[Miscellaneous:]
 HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication skills; excellent troubleshooting, problem solving, and debugging skills; very fast at getting up to speed on existing systems.
 \end{description}
@@ -77,9 +77,9 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 
 \subsection{Open Source Work}
 
-\affiliation[~]{Github}{~}
+\affiliation[~]{GitHub}{~}
 \begin{compactitem}
-\item You can also find many more projects on my Github account at \url{https://github.com/simcop2387/} and as the perlbot project at \url{https://github.com/perlbot/}
+\item You can also find many more projects on my GitHub account at \url{https://github.com/simcop2387/} and as the perlbot project at \url{https://github.com/perlbot/}
 \end{compactitem}
 
 \affiliation[Creator, Lead Designer, and Lead Developer]{App::EvalserverAdvanced}{2006? - Present}
@@ -133,14 +133,14 @@ video that contain human speech using various types of signal analysis.
 \item Customer Production Systems
   \begin{compactitem}
   \item Setup additional monitoring for production systems (Healthchecks.io + PagerDuty)
-  \item Diagnosed overcommited customer systems that were having intermittent issues with IO availablity
-  \item Normal maintainence ensuring customer backups were working properly and testing restoration functionality of systems onto internal staging systems  
+  \item Diagnosed overcommited customer systems that were having intermittent issues with IO availability
+  \item Normal maintenance ensuring customer backups were working properly and testing restoration functionality of systems onto internal staging systems  
   \end{compactitem}
 \end{compactitem}
 
 \affiliation[Senior Software Engineer]{Intellisurvey}{August-November 2019}
 \begin{compactitem}
-\item Backend perl development
+\item Backend Perl development
   \begin{compactitem}
   \item Implemented new parsing and grammar rules for survey language
   \item Fixed parsing errors for survey language
@@ -157,7 +157,7 @@ video that contain human speech using various types of signal analysis.
 \affiliation[Senior Software Engineer]{Sold.com}{2018-2019}
 \begin{compactitem}
 \item Backend service development: Java and Python
-\item Middleware Node.js work to securely and safely expose backend services to the outside world
+\item Middle-ware Node.js work to securely and safely expose backend services to the outside world
 \item Frontend work redesigning key parts of functionality and UX.
 \item Created address matching and normalization service
   \begin{compactitem}
@@ -166,7 +166,7 @@ video that contain human speech using various types of signal analysis.
   \end{compactitem}
 \item Helped revising design of data tracking of the web frontend using Segment.io
 \item Aided Data team in understanding existing application and data coming from the application to develop reports
-\item Managed jenkins service for automatic deployments to development environments and manually triggered deployments to production
+\item Managed Jenkins service for automatic deployments to development environments and manually triggered deployments to production
 \item Managed existing AWS infrastructure
   \begin{compactitem}
   \item Setup new services with ECS and ECR
@@ -180,7 +180,7 @@ video that contain human speech using various types of signal analysis.
 \item Maintained existing legacy systems
   \begin{compactitem}
   \item Thoroughly documented both architecture and functionality in system
-  \item Helped devops team to properly upgrade and deploy legacy system onto upgraded platforms
+  \item Helped DevOps team to properly upgrade and deploy legacy system onto upgraded platforms
   \end{compactitem}
 \item Drove primary back-end development of new features and products
 \item Integrated new vendor systems with the legacy back-ends
@@ -204,7 +204,7 @@ video that contain human speech using various types of signal analysis.
   \begin{compactitem}
   \item Twilio: Simulring/Call hunting and forwarding
   \item Ringcentral: Direct integration via API
-  \item Grasshopper via twilio
+  \item Grasshopper via Twilio
   \item Vonage, AT\&T, Time Warner, et al.
   \end{compactitem}
 \item Helped architect internal API/Reporting and Analytics engine
@@ -218,7 +218,7 @@ video that contain human speech using various types of signal analysis.
 \item Integrated Rent.com systems with parent company property management systems.
 \item Lead the move between data centers migrating almost all production systems.
   \begin{compactitem}
-  \item Moved and tested code from perl 5.14 to perl 5.16
+  \item Moved and tested code from Perl 5.14 to Perl 5.16
   \item Changed deployment system to work as an unprivileged user to accommodate more securely setup systems
   \item Assisted the overnight deployment and testing
   \end{compactitem}
