--- a/resume-connectivity.tex
+++ b/resume-connectivity.tex
@@ -229,11 +229,10 @@ video that contain human speech using various types of signal analysis.
 
 Previous employment information available on request.
 
-
 \section{References}
 \begin{tabular}{lll}
-\rowcolor{white} Kaitlyn Parkhurst & Director of Development at Connectivity & symkat@symkat.com \\
-\rowcolor{lightgray} Jeff Yoak & Directory of Development at Connectivity & jeff@yoak.com \\
-\rowcolor{white} Mike Rozek & Manager at Zip Recruiter & mike@rozeks.com
+\rowcolor{white} Kaitlyn Parkhurst & Senior Software Engineer at Intellisurvey & symkat@symkat.com \\
+\rowcolor{lightgray} Jeff Yoak & Project Manager and Consultant & jeff@yoak.com \\
+\rowcolor{white} Ben Tilly & Software Engineer at ThinkIQ & btilly@gmail.com
 \end{tabular}
 \end{document}
