--- a/resume-retyped.tex
+++ b/resume-retyped.tex
@@ -12,8 +12,8 @@
 \phone{678-551-2387}
 \email{ryan@voots.org}
 \webpage{http://github.com/simcop2387}
-\streetaddress{3223 Rhett Butler Pl}
-\citystatezip{Charlotte, NC 28270}
+\streetaddress{3000 Chestnut Grove Ln. APT 3308}
+\citystatezip{Matthews, NC 28104}
 % \citystatezip{  }
 
 \usepackage{geometry}
@@ -65,7 +65,7 @@
 \section{Skills}
 \begin{description}
 \item[Programming Languages:]
-Perl, JavaScript (Node, react and others), Python, C/C++, SQL
+Perl, Python, JavaScript (Node, react and others), C/C++, SQL
 \item[Operating Systems:]
 Linux, Windows, some OS X
 \item[Applications and Libraries:]
@@ -77,6 +77,27 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 \section{Experience}
 
 \subsection{Work History}
+
+\affiliation{Team Lead}{Ally Financial Inc.}{May 2021-Jan 2026}
+\begin{compactitem}
+\item Banking and Auto Customer Service Bots
+	\begin{compactitem}
+	\item Redesigned customer authentication mechanism to increase security and remove race conditions
+	\item Migration from Amazon Lex to more capable and flexible Rasa based conversation agent
+	\item Completed creation of Auto line of business customer service bot agent
+	\item Significantly expanded Banking side of customer service agent
+		\begin{compactitem}
+		\item Expanded time-relevant tax based customer help by add automatic and dynamic content to handle common customer issues
+		\item Deeply integrated multiple parts of the banking line of business into the agent allowing customers to quickly replace debit cards, get wire status, and a number of other customer facing products and common issues
+		\end{compactitem}
+	\end{compactitem}
+	\item Aided product management in design of customer facing flows
+	\item helped analyze and debug NLU classification of customer inputs to correct issues in training data and agent flow designs (n.b. debit card and credit card nlu confusions etc.)
+	\item Documented NLU model risk and compliance with internal regulations
+	\item Maintained PII scanning and masking service
+	\item Handled large internal migration from internal organizations from one aws account to another line of business (tech to customer service internal orgs) with minimal downtime
+	\item Helped the decomissioning of the Rasa agent project by helping plan the recreation of the agents on a new vendor platform to replace the existing system
+\end{compactitem}
 
 \affiliation[DevOps Contractor]{ThinkIQ}{March 2020-June 2020}
 \begin{compactitem}
