--- a/resume-retyped.tex
+++ b/resume-retyped.tex
@@ -84,19 +84,19 @@ HTML; CSS; IPv4 and IPv6 networking; strong verbal and written communication ski
 	\begin{compactitem}
 	\item Redesigned customer authentication mechanism to increase security and remove race conditions
 	\item Migration from Amazon Lex to more capable and flexible Rasa based conversation agent
-	\item Completed creation of Auto line of business customer service bot agent
+	\item Completed Ally Auto customer service bot agent
 	\item Significantly expanded Banking side of customer service agent
 		\begin{compactitem}
-		\item Expanded time-relevant tax based customer help by add automatic and dynamic content to handle common customer issues
-		\item Deeply integrated multiple parts of the banking line of business into the agent allowing customers to quickly replace debit cards, get wire status, and a number of other customer facing products and common issues
+		\item Expanded time-relevant tax-based customer help by adding automatic and dynamic content to address common customer issues
+		\item Deeply integrated multiple banking systems into the agent, enabling customers to replace debit cards, check wire transfer status, and resolve other common issues
 		\end{compactitem}
 	\end{compactitem}
 	\item Aided product management in design of customer facing flows
 	\item helped analyze and debug NLU classification of customer inputs to correct issues in training data and agent flow designs (n.b. debit card and credit card nlu confusions etc.)
 	\item Documented NLU model risk and compliance with internal regulations
 	\item Maintained PII scanning and masking service
-	\item Handled large internal migration from internal organizations from one aws account to another line of business (tech to customer service internal orgs) with minimal downtime
-	\item Helped the decomissioning of the Rasa agent project by helping plan the recreation of the agents on a new vendor platform to replace the existing system
+	\item Led organizational migration from one AWS account to another line of business (Tech to Customer Service) with minimal downtime
+	\item Aided in decommissioning the Rasa agent project by planning migration to a new vendor platform
 \end{compactitem}
 
 \affiliation[DevOps Contractor]{ThinkIQ}{March 2020-June 2020}
